@@ -9,8 +9,11 @@ Not yet released, available in our GIT repository and in future snapshots and re
 
 Bug fixes:
 
+#1137 ArrayIndexOutOfBoundsException when querying PostGIS geometry columns
+
 #1129 Export table to XLSX does not work / #1129 Export table to XLSX does not work --> Export broke on null values
 #1135 Export of date/time values to XLSX exports number instead of date
+
 #1132 keyboard shortcut alt-down/alt-up not working
 
 Hibernate Plugin: HQL queries that returned results with enum types used to lead to unmarshall exceptions.
